# discord-tui

./: Cargo.toml
hydro-ferrum-com/: Cargo.toml
hydro-ferrum-com/hydro-ferrum-primatives/: Cargo.toml
hydro-ferrum-com/hydro-ferrum-primatives/src/: .lib.rs.rustfmt
hydro-ferrum-com/src/: lib.rs
