[package]
name = "discord-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "hydro-ferrum-com", 
    "hydro-ferrum-com/hydro-ferrum-primatives"
]

[dependencies]
tui = "0.18"
crossterm = "0.24"

