[package]
name = "hydro-ferrum-com"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hydro-ferrum-primatives = { path = "./hydro-ferrum-primatives" }
tokio = { version="1", features = [ "sync" ] }
futures-core = "0.3"
pin-project = "1"
